<resources>
    <string name="number_format">(__) _____ - ____</string>
    <string name="app_name">Phantom</string>
    <string name="field_email">Digite seu email</string>
    <string name="field_pwd">Password</string>
    <string name="field_login">Login</string>
    <string name="string_create_account">Crie sua conta agora!</string>
    <string name="string_pwd_recovery">Esqueci minha senha</string>
    <string name="repeat_password">Digite a senha Novamente</string>
    <string name="password">Digite a senha</string>
    <string name="create_account">Criar Conta</string>
    <string name="do_login">Ja possui uma conta? Faça Login</string>
    <string name="recover_password">Recuperar senha</string>
    <string name="radio_button_yes">Sim</string>
    <string name="radio_button_no">Não</string>
    <string name="form_intro_text">Vamos fazer umas perguntinhas para você, para que seja possível recomendar o melhor dispositivo, ok?</string>
    <string name="submit_form">Submeter Formulário</string>
    <string name="q1">Pergunta 1</string>
    <string name="q2">Pergunta 2</string>
    <string name="q3">Pergunta 3</string>
    <string name="q4">Pergunta 4</string>
    <string name="q5">Pergunta 5</string>
    <string name="q6">Pergunta 6</string>
    <string name="q7">Pergunta 7</string>
    <string name="q8">Pergunta 8</string>
    <string name="q9">Pergunta 9</string>
    <string name="q10">Pergunta 10</string>
    <string name="nome">José Eduardo Lindo</string>
    <string name="role">Estrela de cinema e professor nas horas vagas</string>
    <string name="email">john_snow@pucpr.edu.br</string>
    <string name="email2">Email</string>
    <string name="phoneNumber">41 9 8765-4321</string>
    <string name="phoneNumber2">Telefone</string>
    <string name="data">Suas Informações</string>
    <string name="home_description">Aqui está nossas recomendações, baseadas no formulário que vc preencheu!</string>
    <string name="price1">R$7.400,00</string>
    <string name="price2">R$ 799,00</string>
    <string name="price3">R$2.999,00</string>
</resources>