<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="Autofill,RtlSymmetry,TextFields"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewLogoFP"
        android:layout_width="164dp"
        android:layout_height="144dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/phantom_logo"
        android:layout_alignParentTop="true"
        />


    <EditText
        android:id="@+id/textBoxEmailForgotPassword"
        android:layout_width="342dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:layout_below="@id/imageViewLogoFP"
        android:background="@drawable/custom_textbox_login"
        android:drawableStart="@drawable/vector_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/field_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_hint">
    </EditText>

    <EditText
        android:id="@+id/cellphoneFieldForgotPassword"
        android:layout_width="342dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/textBoxEmailForgotPassword"
        android:background="@drawable/custom_textbox_login"
        android:drawableStart="@drawable/vector_cellphone"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/number_format"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_hint" >
    </EditText>

    <Button
        android:id="@+id/buttonRecoverPassword"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cellphoneFieldForgotPassword"
        android:layout_marginTop="90dp"
        android:background="@drawable/custom_button_login"
        android:text="@string/recover_password"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp">

    </Button>

</RelativeLayout>