<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="158dp"
        android:background="@drawable/custom_button_login"
        android:text="@string/field_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />


    <EditText
        android:id="@+id/textBoxEmailLogin"
        android:layout_width="342dp"
        android:layout_height="65dp"
        android:layout_marginTop="272dp"
        android:background="@drawable/custom_textbox_login"
        android:drawableStart="@drawable/vector_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/field_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_create_account"
        android:textColor="@color/text_color_purple"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBoxEmailLogin"
        app:layout_constraintVertical_bias="0.552" />

    <TextView
        android:id="@+id/textViewRecoverAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_pwd_recovery"
        android:textColor="@color/text_color_purple"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintVertical_bias="0.07" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ShowHidePasswordLayout"
        android:layout_width="342dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toTopOf="@+id/textViewCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBoxEmailLogin"
        app:passwordToggleEnabled="true">


        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/custom_textbox_login"
            android:drawableStart="@drawable/vector_key"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    <com.google.android.material.textfield.TextInputEditText-->
    <!--        android:id="@+id/etPassword"-->
    <!--        android:layout_width="373dp"-->
    <!--        android:layout_height="56dp"-->
    <!--        android:hint="@string/fragment_login_password_hint"-->
    <!--        android:inputType="textPassword"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        tools:layout_editor_absoluteY="129dp" />-->


</androidx.constraintlayout.widget.ConstraintLayout>